--- a/index.html
+++ b/index.html
@@ -1,60 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victor VL - Links Oficiais</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #111;
-            color: white;
-            text-align: center;
-            padding: 40px;
-        }
-        .container {
-            max-width: 400px;
-            margin: auto;
-        }
-        h1 {
-            margin-bottom: 20px;
-        }
-        a {
-            display: block;
-            background: #222;
-            padding: 15px;
-            margin: 12px 0;
-            text-decoration: none;
-            color: white;
-            border-radius: 10px;
-            font-size: 18px;
-            border: 1px solid #444;
-            transition: 0.2s;
-        }
-        a:hover {
-            background: #444;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Victor VL - Links Oficiais</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: white;
+      text-align: center;
+      padding: 40px;
+    }
+    .container {
+      max-width: 400px;
+      margin: auto;
+    }
+    a {
+      display: block;
+      background: #1db954;
+      padding: 15px;
+      margin: 15px 0;
+      border-radius: 8px;
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+    }
+    a:hover {
+      opacity: 0.8;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Victor VL - Links Oficiais</h1>
 
-    <div class="container">
-        <h1>Victor VL</h1>
-        <p>Links Oficiais</p>
+    <a href="https://open.spotify.com/intl-pt/artist/2s2nKMHREizXLa7GTaDgvd?si=ZyWoX6Z3QHWuHRdKXAbvqA" target="_blank">
+      🎧 Spotify
+    </a>
 
-        <a href="https://open.spotify.com/intl-pt/artist/2s2nKMHREizXLa7GTaDgvd?si=ZyWoX6Z3QHWuHRdKXAbvqA" target="_blank">
-            🎧 Spotify
-        </a>
+    <a href="https://www.youtube.com/@VICTORVL31" target="_blank">
+      ▶️ YouTube
+    </a>
 
-        <a href="https://www.youtube.com/@VICTORVL31" target="_blank">
-            ▶️ YouTube
-        </a>
+    <a href="https://www.instagram.com/victtorvl" target="_blank">
+      📸 Instagram
+    </a>
 
-        <a href="https://www.instagram.com/victorvl.oficial/" target="_blank">
-            📸 Instagram
-        </a>
-
-    </div>
-
+  </div>
 </body>
 </html>
+
