Update Instagram link and text in index.html

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
       ▶️ YouTube
     </a>
 
-    <a href="https://www.instagram.com/victtorvl" target="_blank">
-      📸 Instagram
-    </a>
+   <a href="https://www.instagram.com/victtorvl/" target="_blank">
+  Meu Instagram
+</a>
+
 
   </div>
 </body>
